<resources>
    <string name="app_name">RecarGO!</string>
    <string name="activity_title_my_profile">Mi Perfil</string>
    <string name="activity_title_leaderboards">Tabla de Líderes</string>
    <string name="activity_title_prizes_history">Historial de Premios</string>
    <string name="label_accept_terms_and_conditions">Al continuar acepta <u>Términos, Condiciones</u> y <u>Políticas de Privacidad</u> de RecarGO!</string>
    <string name="label_permissions_title">Concede Permisos</string>
    <string name="label_permissions_content">Deberás conceder permisos a la aplicación para hacer uso de todas sus características. Haz click en el siguiente botón</string>
    <string name="toast_permissions_denied">Denegaste los permisos. Inténtalo de nuevo.</string>
    <string name="confirm_country_code">Por favor confirma el código de país e introduce tu número de teléfono</string>
    <string name="label_country">País</string>
    <string name="label_country_code">Cód.</string>
    <string name="label_title_select_country">Seleccione país</string>
    <string name="label_choose">Elegir</string>
    <string name="hint_type_token">Código</string>
    <string name="label_type_token">Hemos enviado un SMS al número proporcionado, por favor ingrese el código de confirmación.</string>
    <string name="label_type_token_part1">Hemos enviado un SMS al número</string>
    <string name="label_type_token_part2">, por favor ingrese el código de confirmación.</string>
    <string name="label_type_token_part3"><s>¿Número equivocado?</s></string>
    <string name="dialog_success_token_validation_message">Se ha validado tu número de teléfono exitosamente.</string>
    <string name="error_title_incorrect_token">CÓDIGO</string>
    <string name="error_label_incorrect_token">Código incorrecto, inténtalo nuevamente.</string>
    <string name="label_make_sure_correct_phone">¡Asegúrate que el número sea el correcto!</string>
    <string name="label_type_vendor_code">Ingresa el código de vendedor</string>
    <string name="label_select_recharge_amount">Seleccione el monto a recargar:</string>
    <string name="label_select_operator">Selecciona el operador móvil:</string>
    <string name="label_title_select_amount_dialog">Seleccione un monto</string>
    <string name="progress_dialog_sending_topup_request">Enviando su solicitud…</string>
    <string name="title_success_dialog_label">¡SOLICITUD ENVIADA!</string>
    <string name="content_success_dialog_label_line1">Se ha enviado tu solicitud de recarga al vendedor.</string>
    <string name="content_success_dialog_label_line2">Recibirás una notificación con el resultado.</string>
    <string name="label_become_a_vendor"><u>¿Quieres vender recargas?</u></string>
    <string name="dialog_title_activate_location">ACTIVAR UBICACIÓN</string>
    <string name="dialog_content_activate_location">Debes activar la ubicación para un uso correcto del mapa.</string>
    <string name="dialog_permissions_title">PERMISOS</string>
    <string name="dialog_permissions_location_content">Debes proporcionar permisos a la aplicación para acceder a tu ubicación y usar la funcionalidad del mapa.</string>
    <string name="label_vendor_code_snippet">Cód. Vendedor: %1$s</string>
    <string name="label_player_code_snippet">Haz click aquí para retarle</string>
    <string name="title_success_dialog_store_report">REPORTE ENVIADO</string>
    <string name="dialog_content_report_sent">Su reporte ha sido enviado exitosamente. ¡Muchas gracias por ayudarnos con información!</string>
    <string name="yvr_vendor_marker_title">¡YoVendoRecarga! Click aquí</string>
    <string name="dialog_title_incompatible_device">DISPOSITIVO INCOMPATIBLE</string>
    <string name="dialog_content_incompatible_device">Tu dispositivo no es compatible para jugar al RecarGO! Necesitarás lo siguiente para usarlo:</string>
    <string name="label_loading_exchanging_chest">¡Abriendo objeto, espera!</string>
    <string name="label_alreadey_open_chest_title">¡Ya lo abriste!</string>
    <string name="label_allowed_open_chest_once_per_day">Solo puedes abrir el mismo objeto una vez al día.</string>
    <string name="label_chest_open_succesfully">Lo has hecho muy bien, lograste conseguir %1$s. ¡Vamos continúa buscando más!</string>
    <string name="label_indicator_prizes">PREMIOS</string>
    <string name="label_indicator_saved">ACUMULADO</string>
    <string name="cant_redeem_title">¡No tan Rápido!</string>
    <string name="redeem_prize_interval">¡Solo te faltan %1$s hora(s) para canjear tu premio! ¡No te canses de jugar, buena suerte!</string>
    <string name="exchange_souvenir_interval">Te faltan %1$s hora(s) para canjear tu souvenir ¡No te canses de jugar, buena suerte!</string>
    <string name="title_not_enough_coins">Sin Monedas...</string>
    <string name="label_not_enough_coins">No tienes suficientes monedas para canjear un premio. ¡Abre más cofres y conseguirás monedas!</string>
    <string name="label_not_enough_coins_store">No tienes suficientes monedas para comprar de la tienda. ¡Abre más cofres y conseguirás monedas!</string>
    <string name="label_redeeming_prize_wait">¡Canjeando premio, espera!</string>
    <string name="label_click_on_button_to_redeem">¡Haz click en el botón \"Ver Premio\" para saber qué ganaste!</string>
    <string name="label_congratulations_title">¡Felicidades!</string>
    <string name="label_have_collected_prize">Haz recolectado tu premio de:</string>
    <string name="label_prize_title">PERSONA FAVORITA</string>
    <string name="label_prize_detail">Para que le puedas llamar y que te llame ilimitado con tu prepago.</string>
    <string name="label_copy_paste_code">Copia y pega este código:</string>
    <string name="edittext_code_example">5A567H232Q</string>
    <string name="label_activate_dialing">Actívalo marcando el:</string>
    <string name="label_ussd_exchange_number">*555#</string>
    <string name="prize_colected_thanks_to">Haz recolectado un premio gracias a:</string>
    <string name="label_reedem_it_dialing">Canjealo marcando el número:</string>
    <string name="title_limited_functionality">FUNCIONALIDAD LIMITADA</string>
    <string name="label_limited_functionality_content">Tu dispositivo carece de características necesarias para el funcionamiento de RecarGO! con realidad aumentada (%1$s), por lo que podrás jugar al RecarGO! con una mecánica diferente.</string>
    <string name="label_warning">¡Atención!</string>
    <string name="label_divice_not_ar_compatible">Tu dispositivo no es compatible con la función de Realidad Aumentada (AR)</string>
    <string name="label_2d_playable">Sin embargo, puedes seguir disfrutando de RecarGO! en su versión en 2 dimensiones.</string>
    <string name="button_continue">Continuar</string>
    <string name="button_login">Registrarme</string>
    <string name="button_my_number">Mi número</string>
    <string name="button_request_topup">Solicitar Recarga</string>
    <string name="button_buy">Comprar</string>
    <string name="button_accept">Aceptar</string>
    <string name="label_loading_please_wait">Por favor espere…</string>
    <string name="button_verify">Verificar</string>
    <string name="button_activate">Activar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_retry">Reintentar</string>
    <string name="button_yes">Si</string>
    <string name="button_no">No</string>
    <string name="button_whatever">Ni modo</string>
    <string name="button_redeem_now">Ver Premio</string>
    <string name="button_leaders_board">Tabla de líderes</string>
    <string name="button_my_prizes">Mis Premios</string>
    <string name="button_logout">Cerrar sesión</string>
    <string name="button_tutorial">Ver Tutorial</string>
    <string name="button_next">Siguiente</string>
    <string name="button_skip">Omitir</string>
    <string name="button_start">Iniciar</string>
    <string name="toast_keep_pressed_three_seconds">Mantén presionado por 3 segundos</string>
    <string name="toast_gold_out_of_search_range">ORO: Saliste del rango de búsqueda</string>
    <string name="toast_silver_out_of_search_range">PLATA: Saliste del rango de búsqueda</string>
    <string name="toast_bronze_out_of_search_range">BRONCE: Saliste del rango de búsqueda</string>
    <string name="spinner_select">Seleccione…</string>
    <string name="hint_your_phone_number"><font size="16">TU TELÉFONO</font></string>
    <string name="hint_specify_phone_number"><font size="16">NÚMERO</font></string>
    <string name="hint_vendor_code"><font size="16">CÓDIGO</font></string>
    <string name="error_title_something_went_wrong">Ups!…</string>
    <string name="error_title_sms_await_title">ESPERA UN POCO…</string>
    <string name="error_content_something_went_wrong_try_again">¡Revisa tu conexión!</string>
    <string name="error_content_progress_something_went_wrong_try_again">Algo ha salido mal al obtener los datos de su progreso, inténtelo nuevamente</string>
    <string name="error_title_internet_connecttion">ERROR DE CONEXIÓN</string>
    <string name="error_content_internet_connecttion">Algo ha salido mal, revisa tu conexión a internet.</string>
    <string name="error_title_vendor_not_found">VENDEDOR NO ENCONTRADO</string>
    <string name="error_content_vendor_not_found_line">No encontramos ningún vendedor con ese código. Asegúrate de escribir el código correcto.</string>
    <string name="error_content_facebook_graph">Error al iniciar sesión en Facebook. Inténtelo nuevamente.</string>
    <string name="error_content_google_auth">Error al iniciar sesión con Google. Inténtelo nuevamente.</string>
    <string name="dialog_success_title">¡ÉXITO!</string>
    <string name="dialog_title_airtime_report">Reporte de Recargas</string>
    <string name="dialog_content_airtime_report">¿Tenían recargas?</string>
    <string name="sign_plus">+%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validation_not_valid_phone_message">Teléfono no válido</string>
    <string name="validation_required_phone_message">El número de teléfono es requerido</string>
    <string name="validation_required_operator">Debe seleccionar un operador</string>
    <string name="validation_required_amount">Debe seleccionar un monto</string>
    <string name="validation_not_valid_vendor_code">El código de vendedor no es válido</string>
    <string name="validation_required_vendor_code">El código de vendedor es requerido</string>
    <string name="validation_title_required">Requerido</string>
    <string name="validation_required_nickname">El nickname es requerido.</string>
    <string name="validation_title_invalid_nickname">Nick</string>
    <string name="validation_not_valid_nickname">Este nickname no es válido. Intenta con otro</string>
    <string name="component_compass">Giroscopio</string>
    <string name="component_gps">GPS</string>
    <string name="component_camera">Cámara</string>
    <string name="component_opengl">OpenGL 2.0</string>
    <string name="contentdescription_2d_prize_image">Imagen de premio 2D</string>
    <string name="label_welcome_to_recargo">¡Bienvenido a RecarGO!</string>
    <string name="label_login_with_facebook">¡Comprar recargas nunca fue tan fácil! Para continuar regístrate o inicia sesión con tu cuenta de Facebook.</string>
    <string name="label_ranking">Ranking</string>
    <string name="label_username">Usuario</string>
    <string name="label_recarcoins">RecarCoins</string>
    <string name="label_daily">Diario</string>
    <string name="label_weekly">Semanal</string>
    <string name="label_monthly">Mensual</string>
    <string name="label_global">Global</string>
    <string name="label_portable_phone_number">Si tu número es portado, no recibirás el SMS de confirmación. Por favor, comunícate con nosotros por WhatsApp al número <b>7768-1443</b> para obtener tu código.</string>
</resources>