<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_token_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_general_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/ActivityVerticalExtraCustomMargin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context="com.globalpaysolutions.yocomprorecarga.ui.activities.TokenInput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ActivityVerticalExtraCustomMargin"
            android:src="@drawable/img_logo_green_recargo"/>

        <TextView
            android:id="@+id/tvCodeSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_type_token"
            android:textColor="@color/GeneralTextColor"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tvWrongPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_type_token_part3"
            android:textColor="@color/AppGreen"
            android:textSize="12sp"/>


        <EditText
            android:id="@+id/etToken"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:hint="@string/hint_type_token"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPortableNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_portable_phone_number"
                android:textColor="@color/GeneralTextColor"
                android:textSize="12sp"
                />


            <Button
                android:id="@+id/btnConfirmToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_effect_ripple_green_rounded_corners"
                android:layout_marginTop="@dimen/margin_16dp"
                android:minWidth="180dp"
                android:onClick="VerifyToken"
                android:paddingLeft="@dimen/ActivityHorizontalCustomMargin"
                android:paddingRight="@dimen/ActivityHorizontalCustomMargin"
                android:text="@string/button_verify"
                android:textColor="@color/ActivityWhiteBackground"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
