<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leaderboards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chests_recargo_theme"
    android:orientation="vertical"
    tools:context="com.globalpaysolutions.yocomprorecarga.ui.activities.Leaderboards">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarLeaderboards"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            app:theme="@style/ToolbarTheme"/>

        <TextView
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:text="@string/activity_title_leaderboards"
            android:textStyle="bold"
            android:textColor="@color/ActivityWhiteBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_8dp"
            android:paddingLeft="@dimen/margin_8dp"
            android:paddingRight="@dimen/margin_8dp"
            android:paddingStart="@dimen/margin_8dp">

            <!--    CONTENEDOR DE INTERVALOS     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:id="@+id/tvToday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/label_daily"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvWeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/label_weekly"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/label_monthly"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvGlobal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/label_global"
                    android:textColor="@color/dark_recargo_green"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_16dp_rounded_corner_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_8dp"
                android:paddingLeft="@dimen/margin_8dp"
                android:paddingRight="@dimen/margin_8dp"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:orientation="horizontal"
                    android:weightSum="15">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/label_ranking"
                        android:textColor="@color/AppGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:text="@string/label_username"
                        android:textColor="@color/AppGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center_horizontal"
                        android:text="@string/label_recarcoins"
                        android:textColor="@color/AppGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                </LinearLayout>


                <com.globalpaysolutions.yocomprorecarga.utils.NonScrollableListView
                    android:id="@+id/lvLeaderboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_16dp"
                android:paddingStart="@dimen/margin_16dp"
                android:paddingLeft="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_16dp"
                android:paddingRight="@dimen/margin_16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/ivLastWinner"
                   android:src="@drawable/ic_last_winner"
                   android:layout_width="30dp"
                   android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/tvLastWinner"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
