<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_custom_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_chests_recargo_theme"
    android:orientation="vertical"
    tools:context="com.globalpaysolutions.yocomprorecarga.ui.activities.LimitedFunctionality">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/margin_16dp"
                android:paddingRight="@dimen/margin_16dp"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_20dp"
                    android:src="@drawable/img_logo_trans_recargo"/>

                <LinearLayout
                    android:layout_width="284dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_16dp_rounded_corner_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_recargo_gradient_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_18dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/margin_8dp"
                            android:gravity="center"
                            android:text="@string/label_warning"
                            android:textColor="@color/AppGreen"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:gravity="center"
                            android:text="@string/label_divice_not_ar_compatible"
                            android:textColor="@color/pure_black"
                            android:textSize="14sp"/>

                        <ImageView
                            android:layout_width="157dp"
                            android:layout_height="85dp"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:src="@drawable/img_three_recarstop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:gravity="center"
                            android:text="@string/label_2d_playable"
                            android:textColor="@color/pure_black"
                            android:textSize="14sp"/>

                        <Button
                            android:id="@+id/btnWhatever"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:layout_marginBottom="@dimen/margin_16dp"
                            android:background="@drawable/btn_ripple_gray_gradient"
                            android:text="@string/button_accept"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</LinearLayout>
